apps/mautrix/googlechat/overlays/nishir/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mautrix-googlechat
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mautrix-googlechat
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: synapse
      ports:
        - port: http
